WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

int    LCAPI lcTinInterLine      (HANDLE hTin, double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcTinInterGetPoint  (HANDLE hTin, int iPnt, double* pX, double* pY, double* pZ);
BOOL   LCAPI lcTinDelPtype       (HANDLE hTin, HANDLE hPtype);
BOOL   LCAPI lcTinDelPoint       (HANDLE hTin, HANDLE hPoint);
BOOL   LCAPI lcTinDelTrian       (HANDLE hTin, HANDLE hTrian);
HANDLE LCAPI lcTinPtypeGetFirst  (HANDLE hTin);
HANDLE LCAPI lcTinPtypeGetNext   (HANDLE hTin, HANDLE hPtype);
HANDLE LCAPI lcTinPtypeGetByName (HANDLE hTin, LPCWSTR szName);
BOOL   LCAPI lcTinPtypeDialog    (HANDLE hTin, HWND hWnd, BOOL bReadOnly);
HANDLE LCAPI lcTinPointGetFirst  (HANDLE hTin);
HANDLE LCAPI lcTinPointGetNext   (HANDLE hTin, HANDLE hPoint);
HANDLE LCAPI lcTinPointGetByPos  (HANDLE hTin, double X, double Y, double Delta);
HANDLE LCAPI lcTinTrianGetFirst  (HANDLE hTin);
HANDLE LCAPI lcTinTrianGetNext   (HANDLE hTin, HANDLE hTrian);
HANDLE LCAPI lcTinTrianGetByPos  (HANDLE hTin, double X, double Y);
// Design window
HANDLE LCAPI lcCreateWindow      (HWND  hWndParent, int Style, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcDeleteWindow      (HANDLE hLcWnd);
BOOL   LCAPI lcWndResize         (HANDLE hLcWnd, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcWndSelectView     (HANDLE hLcWnd, HANDLE hView);
BOOL   LCAPI lcWndZoomRect       (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top);
BOOL   LCAPI lcWndZoomScale      (HANDLE hLcWnd, double Scal);
BOOL   LCAPI lcWndZoomMove       (HANDLE hLcWnd, double DX, double DY);
BOOL   LCAPI lcWndRedraw         (HANDLE hLcWnd);
BOOL   LCAPI lcWndSetFocus       (HANDLE hLcWnd);
BOOL   LCAPI lcWndExeCommand     (HANDLE hLcWnd, int Command, int CmdParam);
BOOL   LCAPI lcWndCoordFromDrw   (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);
BOOL   LCAPI lcWndCoordToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);
BOOL   LCAPI lcWndGetCursorCoord (HANDLE hLcWnd, int* pXwin, int* pYwin, double* pXdrw, double* pYdrw);
HANDLE LCAPI lcWndGetEntByPoint  (HANDLE hLcWnd, int Xwin, int Ywin);
BOOL   LCAPI lcWndSetCmdwin      (HANDLE hLcWnd, HANDLE hCmdLine);
BOOL   LCAPI lcWndSetPropwin     (HANDLE hLcWnd, HANDLE hPropWnd);
BOOL   LCAPI lcWndStopCommand    (HANDLE hLcWnd);    // undoc (instead of lcWndOnClose)
BOOL   LCAPI lcWndGetPoint       (HANDLE hLcWnd, LPCWSTR szPrompt, int SnapMode, int Index, double* pX, double* pY);
BOOL   LCAPI lcWndGetPointBuf    (HANDLE hLcWnd, int Index, double* pX, double* pY);
// Coordinate convertions
BOOL   LCAPI lcCoordDrwToWnd     (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);
BOOL   LCAPI lcCoordWndToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);
// Color from string
BOOL   LCAPI lcColorIsRGB      (LPCWSTR szColor);
int    LCAPI lcColorGetRed     (LPCWSTR szColor);
 
int    LCAPI lcColorGetGreen   (LPCWSTR szColor);
int    LCAPI lcColorGetBlue    (LPCWSTR szColor);
int    LCAPI lcColorGetIndex   (LPCWSTR szColor);
BOOL   LCAPI lcColorToVal      (LPCWSTR szColor, int* pbRGB, int* pIndex, int* pR,int* pG,int* pB);
// Color palette
BOOL   LCAPI lcColorSetPalette (int Index, int R,int G,int B);
BOOL   LCAPI lcColorGetPalette (int Index, int* pR,int* pG,int* pB);
// Command Window
HANDLE LCAPI lcCreateCmdwin    (HWND hWndParent, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcCmdwinResize    (HANDLE hCmdLine, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcCmdwinUpdate    (HANDLE hCmdLine);  // undoc
// Properties Window
HANDLE LCAPI lcCreatePropwin   (HWND hWndParent, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcPropwinResize   (HANDLE hPropWnd, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcPropwinUpdate   (HANDLE hPropWnd, BOOL bSelChanged);
// Misc
int     LCAPI lcGetErrorCode    ();
LPCWSTR LCAPI lcGetErrorStr     ();
int     LCAPI lcExtractPreview  (LPCWSTR szFileName, HGLOBAL hGlob, int MaxSize);
BOOL    LCAPI lcExtractFileInfo (LPCWSTR szFileName, WCHAR* szGuid, WCHAR* szComment, int* pInt0, int* pInt1);
BOOL    LCAPI lcFilletSetLines  (double L1x0, double L1y0, double L1x1, double L1y1, double L2x0, double L2y0, double L2x1, double L2y1);
BOOL    LCAPI lcFillet          (double Rad, double Bis, double Tang);
BOOL    LCAPI lcFilletGetPoint  (int iPnt, double* pX, double* pY);
LPCWSTR LCAPI lcDgGetFileName   (HWND hWnd, int Mode);
LPCWSTR LCAPI lcDgGetValue      (HWND hWnd, int Lef, int Top, LPCWSTR szTitle, LPCWSTR szPrompt, LPCWSTR szValue);
BOOL    LCAPI lcDgGetValue2     (HWND hWnd, int Lef, int Top, LPCWSTR szTitle, LPCWSTR szPrompt, WCHAR* szValue, int MaxChar);
LPCWSTR LCAPI lcPlugGetOption   (LPCWSTR szFileName, LPCWSTR szKey);
BOOL    LCAPI lcPlugSetOption   (LPCWSTR szFileName, LPCWSTR szKey, LPCWSTR szValue, BOOL bSave);
void    LCAPI lcGetPolarPoint   (double X, double Y, double Ang, double Dist, double* pX, double* pY);
BOOL    LCAPI lcGetClientSize   (HWND hWnd, int* pWidth, int* pHeight);
void    LCAPI lcTextOut         (HDC hDC, int x, int y, LPCWSTR szText, int ColorRGB);
// Interface for Custom Commands
HANDLE LCAPI lcCreateCommand   (HANDLE hLcWnd, int Id, LPCWSTR szName, BOOL bNeedSel);
BOOL   LCAPI lcCmdExit         ();
BOOL   LCAPI lcCmdPrompt       (HANDLE hCmd, LPCWSTR szText);
HANDLE LCAPI lcCmdGetEntByPoint (HANDLE hCmd, int Xwnd, int Ywnd);
BOOL   LCAPI lcCmdSelectEnt    (HANDLE hCmd, HANDLE hEntity, BOOL bSelect);
BOOL   LCAPI lcCmdRedraw       (HANDLE hCmd);
BOOL   LCAPI lcCmdSetFocus     (HANDLE hCmd);
BOOL   LCAPI lcCmdRegen        (HANDLE hCmd, HANDLE hEnt);
BOOL   LCAPI lcCmdClearPoints  (HANDLE hCmd);
BOOL   LCAPI lcCmdAddPoint     (HANDLE hCmd, int Id, double X, double Y);
BOOL   LCAPI lcCmdGetPoint     (HANDLE hCmd, int Id, double* pX, double* pY);
BOOL   LCAPI lcCmdSetBasePoint (HANDLE hCmd, BOOL bEnable, double X, double Y);
BOOL   LCAPI lcCmdDrawLine     (HANDLE hCmd, double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcCmdDrawPickbox  (HANDLE hCmd, int Xwnd, int Ywnd);
BOOL   LCAPI lcCmdEqualPoints  (HANDLE hCmd, double X0, double Y0, double X1, double Y1, int Delta);
BOOL   LCAPI lcPaintBegin    (HANDLE hLcWnd);
BOOL   LCAPI lcPaintSetPen   (int Style, int Width, int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintSetBrush (int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintPixel    (double X, double Y, int Size, int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintPoint    (double X, double Y, int PtMode, double PtSize);
BOOL   LCAPI lcPaintLine     (double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcPaintPlineVer (double X, double Y);
BOOL   LCAPI lcPaintPline    (BOOL bClosed, BOOL bFilled, BOOL bBorder);
BOOL   LCAPI lcPaintCircle   (double X, double Y, double R, BOOL bFilled, BOOL bBorder);