WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.bas

Public Declare Function lcTinInterLine Lib "Litecad.dll" (ByVal hTin As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Long
Public Declare Function lcTinInterGetPoint Lib "Litecad.dll" (ByVal hTin As Long, ByVal iPnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long) As Long
Public Declare Function lcTinDelPtype Lib "Litecad.dll" (ByVal hTin As Long, ByVal hPtype As Long) As Long
Public Declare Function lcTinDelPoint Lib "Litecad.dll" (ByVal hTin As Long, ByVal hPoint As Long) As Long
Public Declare Function lcTinDelTrian Lib "Litecad.dll" (ByVal hTin As Long, ByVal hTrian As Long) As Long
Public Declare Function lcTinPtypeGetFirst Lib "Litecad.dll" (ByVal hTin As Long) As Long
Public Declare Function lcTinPtypeGetNext Lib "Litecad.dll" (ByVal hTin As Long, ByVal hPtype As Long) As Long
Public Declare Function lcTinPtypeGetByName Lib "Litecad.dll" (ByVal hTin As Long, ByVal szName As String) As Long
Public Declare Function lcTinPtypeDialog Lib "Litecad.dll" (ByVal hTin As Long, ByVal hWnd As Long, ByVal bReadOnly As Long) As Long
Public Declare Function lcTinPointGetFirst Lib "Litecad.dll" (ByVal hTin As Long) As Long
Public Declare Function lcTinPointGetNext Lib "Litecad.dll" (ByVal hTin As Long, ByVal hPoint As Long) As Long
Public Declare Function lcTinPointGetByPos Lib "Litecad.dll" (ByVal hTin As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Long
Public Declare Function lcTinTrianGetFirst Lib "Litecad.dll" (ByVal hTin As Long) As Long
Public Declare Function lcTinTrianGetNext Lib "Litecad.dll" (ByVal hTin As Long, ByVal hTrian As Long) As Long
Public Declare Function lcTinTrianGetByPos Lib "Litecad.dll" (ByVal hTin As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcCreateWindow Lib "Litecad.dll" (ByVal hWndParent As Long, ByVal Style As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcDeleteWindow Lib "Litecad.dll" (ByVal hLcWnd As Long) As Long
Public Declare Function lcWndResize Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcWndSelectView Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal hView As Long) As Long
Public Declare Function lcWndZoomRect Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double) As Long
Public Declare Function lcWndZoomScale Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Scal As Double) As Long
Public Declare Function lcWndZoomMove Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal DX As Double, ByVal DY As Double) As Long
Public Declare Function lcWndRedraw Lib "Litecad.dll" (ByVal hLcWnd As Long) As Long
Public Declare Function lcWndSetFocus Lib "Litecad.dll" (ByVal hLcWnd As Long) As Long
Public Declare Function lcWndExeCommand Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Command As Long, ByVal CmdParam As Long) As Long
Public Declare Function lcWndCoordFromDrw Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Xdrw As Double, ByVal Ydrw As Double, ByVal pXwin As Long, ByVal pYwin As Long) As Long
Public Declare Function lcWndCoordToDrw Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Xwin As Long, ByVal Ywin As Long, ByVal pXdrw As Long, ByVal pYdrw As Long) As Long
Public Declare Function lcWndGetCursorCoord Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal pXwin As Long, ByVal pYwin As Long, ByVal pXdrw As Long, ByVal pYdrw As Long) As Long
Public Declare Function lcWndGetEntByPoint Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Xwin As Long, ByVal Ywin As Long) As Long
Public Declare Function lcWndSetCmdwin Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal hCmdLine As Long) As Long
Public Declare Function lcWndSetPropwin Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal hPropWnd As Long) As Long
Public Declare Function lcWndStopCommand Lib "Litecad.dll" (ByVal hLcWnd As Long) As Long
Public Declare Function lcWndGetPoint Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal szPrompt As String, ByVal SnapMode As Long, ByVal Index As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcWndGetPointBuf Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Index As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcCoordDrwToWnd Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Xdrw As Double, ByVal Ydrw As Double, ByVal pXwin As Long, ByVal pYwin As Long) As Long
Public Declare Function lcCoordWndToDrw Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Xwin As Long, ByVal Ywin As Long, ByVal pXdrw As Long, ByVal pYdrw As Long) As Long
Public Declare Function lcColorIsRGB Lib "Litecad.dll" (ByVal szColor As String) As Long
Public Declare Function lcColorGetRed Lib "Litecad.dll" (ByVal szColor As String) As Long
Public Declare Function lcColorGetGreen Lib "Litecad.dll" (ByVal szColor As String) As Long
Public Declare Function lcColorGetBlue Lib "Litecad.dll" (ByVal szColor As String) As Long
Public Declare Function lcColorGetIndex Lib "Litecad.dll" (ByVal szColor As String) As Long
Public Declare Function lcColorToVal Lib "Litecad.dll" (ByVal szColor As String, ByVal pbRGB As Long, ByVal pIndex As Long, ByVal pR As Long, ByVal pG As Long, ByVal pB As Long) As Long
Public Declare Function lcColorSetPalette Lib "Litecad.dll" (ByVal Index As Long, ByVal R As Long, ByVal G As Long, ByVal B As Long) As Long
Public Declare Function lcColorGetPalette Lib "Litecad.dll" (ByVal Index As Long, ByVal pR As Long, ByVal pG As Long, ByVal pB As Long) As Long
Public Declare Function lcCreateCmdwin Lib "Litecad.dll" (ByVal hWndParent As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcCmdwinResize Lib "Litecad.dll" (ByVal hCmdLine As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcCmdwinUpdate Lib "Litecad.dll" (ByVal hCmdLine As Long) As Long
Public Declare Function lcCreatePropwin Lib "Litecad.dll" (ByVal hWndParent As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcPropwinResize Lib "Litecad.dll" (ByVal hPropWnd As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcPropwinUpdate Lib "Litecad.dll" (ByVal hPropWnd As Long, ByVal bSelChanged As Long) As Long
Public Declare Function lcGetErrorCode Lib "Litecad.dll" () As Long
Public Declare Function lcGetErrorStr Lib "Litecad.dll" () As String
Public Declare Function lcExtractPreview Lib "Litecad.dll" (ByVal szFileName As String, ByVal hGlob As Long, ByVal MaxSize As Long) As Long
Public Declare Function lcExtractFileInfo Lib "Litecad.dll" (ByVal szFileName As String, ByVal szGuid As Any, ByVal szComment As Any, ByVal pInt0 As Long, ByVal pInt1 As Long) As Long
Public Declare Function lcFilletSetLines Lib "Litecad.dll" (ByVal L1x0 As Double, ByVal L1y0 As Double, ByVal L1x1 As Double, ByVal L1y1 As Double, ByVal L2x0 As Double, ByVal L2y0 As Double, ByVal L2x1 As Double, ByVal L2y1 As Double) As Long
Public Declare Function lcFillet Lib "Litecad.dll" (ByVal Rad As Double, ByVal Bis As Double, ByVal Tang As Double) As Long
Public Declare Function lcFilletGetPoint Lib "Litecad.dll" (ByVal iPnt As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcDgGetFileName Lib "Litecad.dll" (ByVal hWnd As Long, ByVal Mode As Long) As String
Public Declare Function lcDgGetValue Lib "Litecad.dll" (ByVal hWnd As Long, ByVal Lef As Long, ByVal Top As Long, ByVal szTitle As String, ByVal szPrompt As String, ByVal szValue As String) As String
Public Declare Function lcDgGetValue2 Lib "Litecad.dll" (ByVal hWnd As Long, ByVal Lef As Long, ByVal Top As Long, ByVal szTitle As String, ByVal szPrompt As String, ByVal szValue As Any, ByVal MaxChar As Long) As Long
Public Declare Function lcPlugGetOption Lib "Litecad.dll" (ByVal szFileName As String, ByVal szKey As String) As String
Public Declare Function lcPlugSetOption Lib "Litecad.dll" (ByVal szFileName As String, ByVal szKey As String, ByVal szValue As String, ByVal bSave As Long) As Long
Public Declare Sub lcGetPolarPoint Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Ang As Double, ByVal Dist As Double, ByVal pX As Long, ByVal pY As Long)
Public Declare Function lcGetClientSize Lib "Litecad.dll" (ByVal hWnd As Long, ByVal pWidth As Long, ByVal pHeight As Long) As Long
Public Declare Sub lcTextOut Lib "Litecad.dll" (ByVal hDC As Long, ByVal x As Long, ByVal y As Long, ByVal szText As String, ByVal ColorRGB As Long)
Public Declare Function lcCreateCommand Lib "Litecad.dll" (ByVal hLcWnd As Long, ByVal Id As Long, ByVal szName As String, ByVal bNeedSel As Long) As Long
Public Declare Function lcCmdExit Lib "Litecad.dll" () As Long
Public Declare Function lcCmdPrompt Lib "Litecad.dll" (ByVal hCmd As Long, ByVal szText As String) As Long
Public Declare Function lcCmdGetEntByPoint Lib "Litecad.dll" (ByVal hCmd As Long, ByVal Xwnd As Long, ByVal Ywnd As Long) As Long
Public Declare Function lcCmdSelectEnt Lib "Litecad.dll" (ByVal hCmd As Long, ByVal hEntity As Long, ByVal bSelect As Long) As Long
Public Declare Function lcCmdRedraw Lib "Litecad.dll" (ByVal hCmd As Long) As Long
Public Declare Function lcCmdSetFocus Lib "Litecad.dll" (ByVal hCmd As Long) As Long
Public Declare Function lcCmdRegen Lib "Litecad.dll" (ByVal hCmd As Long, ByVal hEnt As Long) As Long
Public Declare Function lcCmdClearPoints Lib "Litecad.dll" (ByVal hCmd As Long) As Long
Public Declare Function lcCmdAddPoint Lib "Litecad.dll" (ByVal hCmd As Long, ByVal Id As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcCmdGetPoint Lib "Litecad.dll" (ByVal hCmd As Long, ByVal Id As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function lcCmdSetBasePoint Lib "Litecad.dll" (ByVal hCmd As Long, ByVal bEnable As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcCmdDrawLine Lib "Litecad.dll" (ByVal hCmd As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Long
Public Declare Function lcCmdDrawPickbox Lib "Litecad.dll" (ByVal hCmd As Long, ByVal Xwnd As Long, ByVal Ywnd As Long) As Long
Public Declare Function lcCmdEqualPoints Lib "Litecad.dll" (ByVal hCmd As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Delta As Long) As Long
Public Declare Function lcPaintBegin Lib "Litecad.dll" (ByVal hLcWnd As Long) As Long
Public Declare Function lcPaintSetPen Lib "Litecad.dll" (ByVal Style As Long, ByVal Width As Long, ByVal ColorRed As Long, ByVal ColorGreen As Long, ByVal ColorBlue As Long) As Long
Public Declare Function lcPaintSetBrush Lib "Litecad.dll" (ByVal ColorRed As Long, ByVal ColorGreen As Long, ByVal ColorBlue As Long) As Long
Public Declare Function lcPaintPixel Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Size As Long, ByVal ColorRed As Long, ByVal ColorGreen As Long, ByVal ColorBlue As Long) As Long
Public Declare Function lcPaintPoint Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal PtMode As Long, ByVal PtSize As Double) As Long
Public Declare Function lcPaintLine Lib "Litecad.dll" (ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Long
Public Declare Function lcPaintPlineVer Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcPaintPline Lib "Litecad.dll" (ByVal bClosed As Long, ByVal bFilled As Long, ByVal bBorder As Long) As Long
Public Declare Function lcPaintCircle Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal R As Double, ByVal bFilled As Long, ByVal bBorder As Long) As Long
